--- a/index.html
+++ b/index.html
@@ -14,23 +14,33 @@
       <div class="cube">
         <div
           class="face front"
-          style="--bg: #e84d80; --bef: #524061; --aft: #a9d8c7"
+          style="--bg: #e84d80; 
+                 --bef: #524061;
+                 --aft: #a9d8c7"
         ></div>
         <div
           class="face back"
-          style="--bg: #a9d8c7; --bef: #e84d80; --aft: #524061"
+          style="--bg: #a9d8c7; 
+                 --bef: #e84d80; 
+                 --aft: #524061"
         ></div>
         <div
           class="face right"
-          style="--bg: #e84d80; --bef: #e84d80; --aft: #524061"
+          style="--bg: #e84d80; 
+                 --bef: #e84d80; 
+                 --aft: #524061"
         ></div>
         <div
           class="face left"
-          style="--bg: #a9d8c7; --bef: #e84d80; --aft: #524061"
+          style="--bg: #a9d8c7; 
+                 --bef: #e84d80;
+                 --aft: #524061"
         ></div>
         <div
           class="face top"
-          style="--bg: #524061; --bef: #a9d8c7; --aft: #e84d80"
+          style="--bg: #524061;
+                 --bef: #a9d8c7; 
+                 --aft: #e84d80"
         ></div>
         <div class="face bottom" style="--bg: #e84d80"></div>
       </div>
